# Comply

./: .comply.yml  .gitignore  CLAUDE.md  DEMO.md  PLAN.md  README.md  pyproject.toml
comply/: __init__.py  checker.py  cli.py  mcp_server.py  webhook.py
comply/rules/: ast_check.py  llm.py  regex_check.py
tests/: test_integration.py  test_llm_providers.py
