[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comply"
version = "0.1.0"
description = "A Python CLI tool and MCP server for enforcing team conventions via LLM"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
comply = "comply.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["comply"]
